cluster/vpn-gateway/ciliumnetworkpolicy-gateway-pod-gateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpn-gateway-pod-gateway
  namespace: vpn-gateway
  labels:
    app.kubernetes.io/instance: vpn-gateway
    app.kubernetes.io/name: pod-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: vpn-gateway
      app.kubernetes.io/name: pod-gateway

  egress:
    # 1. Allow the VPN connection to the internet (Handshake)
    - toCIDR:
        - 0.0.0.0/0
      toPorts:
        - ports:
            - port: "1197"
              protocol: UDP
    # 2. Allow internal cluster traffic
    - toEntities:
        - cluster
        - host
        - kube-apiserver
    # 3. Allow DNS (needed to resolve VPN endpoints)
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
